# gavinboss.github.io

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
Assignment 1/: system_info.html  system_info.qmd
_site/: about.html  index.html  search.json
