[project]
name = "gavinboss-github-io"
version = "0.0.1"
description = "initial website for Gavin Boss Github"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "gavinboss"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
